--- a/literatures/list.bib
+++ b/literatures/list.bib
@@ -153,6 +153,16 @@
   publisher={IACSIT Press}
 }
 
+@article{allen2007likert,
+  title={Likert scales and data analyses},
+  author={Allen, I Elaine and Seaman, Christopher A},
+  journal={Quality progress},
+  volume={40},
+  number={7},
+  pages={64--65},
+  year={2007}
+}
+
 @article{maslow1943theory,
   title={A theory of human motivation.},
   author={Maslow, Abraham Harold},
