--- a/src/ch04-experiment.tex
+++ b/src/ch04-experiment.tex
@@ -6,10 +6,10 @@
 
 \subsection{User Study Process}
 Let users use our recommendation system, record their feedback and answers to the questionnaires, and analyze data to evaluate the performance and interpretability of our recommendation system.
-\par After reading the explanations about the user study, users will input some personal data (user id, gender, age and occupation) and then answer some background questions. For building user Pprtraits, system will give user a series of movie posters and names. user can click to select the movies he likes from 6 options. Click the ?REFRESH? button to load the new 6 options and repeat this selection process until the user has selected a total of 10 movies. After that, the system will give user a series of recommendation movies and the explanations why these are recommended to the user. The user can click to select the movies he likes and give a score for the explanations. Repeat this recommendation step three times. Finally, the user will be required to answer some feedback questions.
+\par After reading the explanations about the user study, users will input some personal data (user id, gender, age and occupation) and then answer some background questions. For building user prtraits, system will give user a series of movie posters and names. user can click to select the movies he likes from 6 options. Click the REFRESH button to load the new 6 options and repeat this selection process until the user has selected a total of 10 movies. After that, the system will give user a series of recommendation movies and the explanations why these are recommended to the user. The user can click to select the movies he likes and give a score for the explanations. Repeat this recommendation step three times. Finally, the user will be required to answer some feedback questions.
 
 \subsection{likert Scale}
-The statistics of the questionnaire about system evaluation by using likert scale are shown in figure \ref{figure:1}.
+The statistics of the questionnaire about system evaluation by using likert scale\cite{allen2007likert} are shown in figure \ref{figure:1}.
 
 \begin{figure}[h]
 \caption{Feedback question about system evaluation}
@@ -56,14 +56,14 @@ Correspondingly, the division of questions for evaluating the recommendation sys
 \label{table:1}
 \end{table}
 
-\paragraph{Confidence:}
-\paragraph{Transparency:}
-\paragraph{Satisfaction:}
-\paragraph{Accuracy:}
+%\paragraph{Satisfaction: } Q8
+%\paragraph{Diversity: } Q14
+%\paragraph{Trust: } Q17
+\paragraph{Accuracy: }
 Comparing the three questions about accuracy ( Q7, Q9, Q10), we can find a very interesting phenomenon. Some users said that the recommendation system recommended the right movies to them, but they thought that the recommendation system did not recommend the movies they really expected and needed.
 \par As Abraham argues in \cite{maslow1943theory} about Maslow's hierarchy of needs, from low to high, human needs are divided into physiological needs, safety needs, social needs, esteem and self-actualization needs.
 \par Most recommendation systems, including our recommendation system, often recommend things that users may be interested in based on some data and records. This is certainly the right recommendation, but sometimes it may not be what users really expect and demand. The recommended things only satisfy the user's physiological needs, safety needs, and social needs. And higher-level esteem and self-actualization needs may become one of the possible development directions of future recommendation systems research area.
 	
-\subsection{Result analysis}
+%\subsection{Result analysis}
 
 \cleardoublepage
