--- a/src/ch05-evaluation.tex
+++ b/src/ch05-evaluation.tex
@@ -2,6 +2,21 @@
 \section{Evaluation}
 \label{ch:evaluation}
 
-\epigraph{That men do not learn very much from the lessons of history is the most important of all the lessons that history has to teach.}{Aldous Huxley}
+
+\begin{figure}[h]
+\caption{User behavior data}
+\label{figure:5-1}
+\centering
+\includegraphics[width=1\textwidth]{database}
+\end{figure}
+
+Figure \ref{figure:5-1} is the structure of user behavior data. We collect:
+\par the data of users' id
+\par All the movies' id that selected by some users
+\par Seen status (0:not seen, 1: seen)
+\par Explanation type
+\par Explanation score
+\par Recommendation round number
+\par We have already evaluated the data and have used it to build the Likert scale in the user study section.
 
 \cleardoublepage
