--- a/src/ch06-discussion.tex
+++ b/src/ch06-discussion.tex
@@ -2,6 +2,16 @@
 \section{Discussion}
 \label{ch:discussion}
 
-\epigraph{That men do not learn very much from the lessons of history is the most important of all the lessons that history has to teach.}{Aldous Huxley}
+With the development of communication technology and data science, the relationship between people and information has evolved from one-way, people looking for information, to the current two-way relationship.
+\par We compare the different ways in 5 recommendation styles in the recommendation style section. About the popularity-based recommendation, it often represents the important characteristics of a product. Users who depend on simple and limited sources of information, will be affected by the popularity of movies to some extent. The popularity of a movie will greatly influence user's decisions. Because of psychological factors, when recommending popular movies to users, even if they are not the type the user likes, users usually subconsciously give these movies a higher rating.
+\par The user-based recommendation strategy more considers the interests of new user and other users with the same hobbies, recommends items that other users like / visited to the new user, and has little to do with new user's current behavior.What will be recommended to a new user, depends on what the other users have visited before. 
+\par Item-based mainly uses users' historical interests to make recommendations. Recommending items that are similar to the user's history. This method has a lot to do with the user's current behavior. The similarity between the item recommended to the user and the item previously selected by the user is understandable by the user, which is called Interpretable. The recommended item is not related to user identity, so it is better to solve the problem of new users.
+\par According to the basic information of the system user, find out the relevance of the user, and then make recommendations. At present, it is rarely used alone in large systems, and it is usually used in combination with other recommendation algorithms. The usual method is to classify the user based on the user's registration information, and then recommend to the user the items in the category to which he belongs. In this paper, we use gender, age and occupation of user as feature of demographic-based recommendation method.
+\par Based on the user's past browsing history, make recommendations to the user that he/she has not viewed. Recommendations are generally based on keywords or content features. The advantage of this method is that there is no popularity bias, items with rare features can be recommended, and user content characteristics can be used to provide recommendation explanations. The disadvantage is that the content must be machine-readable and meaningful, and the features of the recommended content need to be archived in advance.
+\par Because various recommendation styles have particular advantages and disadvantages, in practical applications, a hybrid recommendation system is a better choice. The combination and adaptation with content recommendation and collaborative filtering recommendation is the common used method.
+\par From a vertical perspective, over time and the development of computer technology. Human initiative is decreasing, and correspondingly, Internet initiative is increasing. This may be the trend of future recommendation system development.
+\par With the development of Internet technology and computing science today, the speed of information generation and transmission is getting faster and faster, and the volume is getting larger and larger. The recommendation system plays a very important and irreplaceable role in the interaction between people and the Internet. But on the other hand, we can see that recommendation engines have great development potential to achieve the same magnitude as search engines.
+ 
+
 
 \cleardoublepage
