--- a/src/ch07-conclusion.tex
+++ b/src/ch07-conclusion.tex
@@ -6,5 +6,30 @@
 
 % Future research: And higher-level esteem and self-actualization needs may become one of the possible development directions of future recommendation systems research area.
 % emotion affective recommendation
+We compared the different ways in 5 recommendation styles and proposed a hybrid recommendation system combined all the 5 recommendation styles. We provided an overview of the relationship among recommend system, recommendation explanation, and explanation adaptation. We explored the ways in which design an adaptation style for the recommendation explanation module and feedback scoring module. And we proposed a new methodology for the "adaptation rule" or "adaptation algorithm" of recommendation explanation.
+\par We have understood the importance of the recommendation explanation for recommendation systems. Many current commercial recommendation systems rarely provide explanations, and even if a recommendation explanation is provided, most of them only adopt a single simple explanation mechanism. And these recommendation explanations are not fully utilized to improve the performance of the recommendation system.
+\par In this thesis, we have experimentally confirmed that the research on the interpretability of the recommendation system helps the recommendation system to better interact with users, thereby generating accurate, effective and trustworthy recommendations. 
+\par The single recommendation method works poorly. Because various recommendation styles have particular advantages and disadvantages, in practical applications, a hybrid recommendation system is often used. We studied the combination and adaptation methods with content recommendation and collaborative filtering recommendation. The simplest way is to use a content-based method and a collaborative filtering recommendation method to generate a recommendation prediction result, and then use the explanation template to combine the results, and allow the interaction between explanation recommendation and user to adapt this result.
+\\
+\par In the future, the research direction of explanation recommendation systems can be the following aspects:
 
+\begin{itemize}
+
+\item[(a)]{\textbf{Intelligence and visualization:}}\\
+We proposed a method " word cloud ", which is exactly a kind of visualization of explanation, that can be used for the adaptation of explanation.
+\par The current recommendation explanations are more often presented with simple text explanations. For recommendation systems that store a large amount of information, the explanation content presented by the text is also bound to be huge. For example, a user browses a shopping website, the recommend explanation may only be 3 lines of text, but if hundreds of products, with recommending explanations, are displayed to the user at the same time. The amount of data the user will receive is very large, it will affect user-friendliness and greatly reduces the efficiency of recommendation explanation.
+\par We can reduce the user's information receiving burden by visualizing the explanation. As recommendations become more precise and personalized, the content of recommendation explanations can be designed more intelligently. Trying to use deep learning methods to generate natural language that users can easily understand, to strengthen the interaction with the user and to improve user trust and satisfaction and effectively.
+
+\item[(b)]{\textbf{Design a more comprehensive interpretation template:}}\\
+For better interpreting and promoting the effectiveness of the recommendation system, in addition to considering the evaluation criteria of the explanation and clearly explaining it, the presentation method of the recommendation system, interaction between users and explanations, and other aspects should also be taken into account.
+
+\item[(c)]{\textbf{More detailed classification:}}\\
+With the continuous development of recommendation systems, when new types of recommendation algorithms appear, new types of explanation also appear. To make the recommend explanation classification more general and to include a new type of interpretation, the classification dimension of interpretation will need to be further expanded, not just based on the three characteristics of users, products, and content. New dimensions such as time, place, and emotion may be added in the future.
+
+\item[(d)]{\textbf{Dive deeper into performance comparisons between explanation styles:}}\\
+At present, although there are evaluation standards for recommendation explanation, the research results in this area are still lacking for the performance comparison of different explanation types based on the role of different goals. And if we can accurately compare the advantages and disadvantages of different explanation types under different requirements, it will help system designers to more accurately choose the appropriate recommendation explanation styles for different recommendation systems.
+
+
+
+\end{itemize}
 \cleardoublepage
