--- a/slides.tex
+++ b/slides.tex
@@ -41,18 +41,18 @@ citecolor=black,
 }
 \definecolor{lmugreen}{RGB}{0,102,51}
 
-\title[Short Thesis Title]{
-    FULL THESIS TITLE
+\title[Explanation Adaptation for HRS]{
+    Explanation Adaptation for Hybrid Multimedia Recommendation System
 }
-\author[AUTHOR, YEAR]{
-    AUTHOR
+\author[Zhe Li, 2020]{
+    Zhe Li
 }
 \institute[LMU]{
     University of Munich \\
-    \texttt{\href{firstname.lastname@campus.lmu.de}{firstname.lastname@campus.lmu.de}}
+    \texttt{\href{li.zhe@campus.lmu.de}{li.zhe@campus.lmu.de}}
     }
-\date[Thesis Disputation, \today, 2019]{
-    Thesis Disputation, Munich, Germany\\
+\date[Thesis Disputation, \today, 2020]{
+     Munich, Germany\\
     \today
 }
 
@@ -72,14 +72,20 @@ citecolor=black,
     \frametitle{Outline}
     \tableofcontents[currentsection]
   \end{frame}
+  \begin{frame}
+
 }
 
-\section{Motivation}
-\begin{frame}{Motivation}
+
+
+
+
+\section{Introduction}
+\begin{frame}{Introduction}
     \begin{itemize}
-        \item bullet points 1 \pause
-        \item bullet points 2 \pause
-        \item bullet points 3 \cite{lamport1994latex} \pause
+        \item History of Recommendation System \pause
+        \item Interaction Between People and Internet \pause
+        \item My Contributions \pause
         \item ...
     \end{itemize}
 \end{frame}
@@ -87,7 +93,6 @@ citecolor=black,
 \section{Conclusion}
 \begin{frame}{Conclusion}
     \small
-    Take away:
     \pause
     \begin{itemize}
         \item bullet points 1
